<resources>
    <string name="app_name">Punktual</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">sign in</string>
    <string name="username">Username</string>
    <string name="a_clock">a clock</string>
    <string name="token">Token</string>
    <string name="timberTag">carl</string>
    <string name="id">id</string>
    <string name="papeterie">papeterie</string>
    <string name="campus">campus</string>
    <string name="get_user">get user</string>
    <string name="code_400">Your request is malformed, or missing data</string>
    <string name="code_409_register">User already exists, login instead</string>
    <string name="code_200_register">You are registered and logged in</string>
    <string name="code_404_login">User not found on the server, register before login</string>
    <string name="code_404_position_register">Specified user not found in storage, please register before to get an Id</string>
    <string name="code_200_login">You are logged in</string>
    <string name="error_pushtoken">PushToken is required</string>
    <string name="error_username">Username is required</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="error_latitude">Latitude is required</string>
    <string name="error_longitude">Longitude is required</string>
    <string name="message_title">You sent a message:</string>
    <string name="message_campus">I\'m on campus</string>
    <string name="message_papeterie">I\'m close papeteries</string>
    <string name="latitude_campus">45.907888</string>
    <string name="longitude_campus">6.102780</string>
    <string name="parking_latitude">45.909165</string>
    <string name="parking_longitude">6.105376</string>

</resources>
